--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-router-devtools": "^1.140.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
