--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     ]
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.140.1",
     "@tanstack/react-router-devtools": "^1.140.1",
+    "axios": "^1.13.2",
+    "axios-cache-interceptor": "^1.9.0",
+    "pokenode-ts": "^1.20.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
